<resources>
    <string name="app_name">ToDo</string>
    <string name="to_do_list">To Do List</string>
    <string name="done">Done!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="add_new_task">Add new task</string>
    <string name="select_date">Select date</string>
    <string name="add">Add</string>
    <string name="title_must_be_at_least_3_characters">Title must be at least 3 characters</string>
    <string name="description_must_be_at_least_5_characters">Description must be at least 5 characters</string>
    <string name="delete_task_successfully">Delete Task Successfully 🗑️</string>
    <string name="update_task">Update Task</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="mode">Mode</string>
    <string-array name="myLanguageItems">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="myModeItems">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>