<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_task_fragment.AddTaskFragment">

    <TextView
        android:id="@+id/timeTV"
        style="@style/bold18Prime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:text="@string/add_new_task"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"

        app:layout_constraintTop_toBottomOf="@id/timeTV">

        <EditText
            android:id="@+id/titleET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/title"
            android:inputType="text"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/white"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        app:layout_constraintTop_toBottomOf="@id/titleInputLayout">

        <EditText
            android:id="@+id/descriptionET"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:hint="@string/description"
            android:inputType="text"
            android:gravity="top"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/selectDateTitle"
        style="@style/bold20Black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/select_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout" />

    <TextView
        android:id="@+id/selectDateTV"
        style="@style/bold20Black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="2025/1/2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectDateTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addTaskBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/primary"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/onPrimary"
        app:layout_constraintTop_toBottomOf="@id/selectDateTV" />
</androidx.constraintlayout.widget.ConstraintLayout>